--- a/profiles/commons/themes/cb/sass/components/_main-header.scss
+++ b/profiles/commons/themes/cb/sass/components/_main-header.scss
@@ -203,15 +203,17 @@
     background-image: url(../images/branch-select-arrow.png);
     background-repeat: no-repeat;
     background-size: 20px;
-    background-position: right center;
-    padding-right: 40px;
+    background-position: right 1rem center;
+  }
+
+  a {
+    width: 12rem;
   }
 
   ul.region-select {
     padding: 0;
     background-color: $gray-darkest;
     font-size: $h1Size;
-    max-width: 180px;
     margin: 0;
 
     &.closed {
